fix recorder canvas cropped

--- a/www/less/main/pages/content-blackboard.less
+++ b/www/less/main/pages/content-blackboard.less
@@ -19,6 +19,7 @@
 
 	.recorder-controls {
 		text-align: center;
+		height: 900px;
 		.colors {
 			display: inline-block;
 			input {
